3.3.4/_sources/gallery/ticks_and_spines/colorbar_tick_labelling_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/ticks_and_spines/colorbar_tick_labelling_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_ticks_and_spines_colorbar_tick_labelling_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_ticks_and_spines_colorbar_tick_labelling_demo.py:


============================
Colorbar Tick Labelling Demo
============================

Produce custom labelling for a colorbar.

Contributed by Scott Sinclair

.. GENERATED FROM PYTHON SOURCE LINES 10-20

.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np
    from matplotlib import cm
    from numpy.random import randn


    # Fixing random state for reproducibility
    np.random.seed(19680801)








.. GENERATED FROM PYTHON SOURCE LINES 21-22

Make plot with vertical (default) colorbar

.. GENERATED FROM PYTHON SOURCE LINES 22-34

.. code-block:: default


    fig, ax = plt.subplots()

    data = np.clip(randn(250, 250), -1, 1)

    cax = ax.imshow(data, cmap=cm.coolwarm)
    ax.set_title('Gaussian noise with vertical colorbar')

    # Add colorbar, make sure to specify tick locations to match desired ticklabels
    cbar = fig.colorbar(cax, ticks=[-1, 0, 1])
    cbar.ax.set_yticklabels(['< -1', '0', '> 1'])  # vertically oriented colorbar




.. image:: /gallery/ticks_and_spines/images/sphx_glr_colorbar_tick_labelling_demo_001.png
    :alt: Gaussian noise with vertical colorbar
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    [Text(1, -1, '< -1'), Text(1, 0, '0'), Text(1, 1, '> 1')]



.. GENERATED FROM PYTHON SOURCE LINES 35-36

Make plot with horizontal colorbar

.. GENERATED FROM PYTHON SOURCE LINES 36-48

.. code-block:: default


    fig, ax = plt.subplots()

    data = np.clip(randn(250, 250), -1, 1)

    cax = ax.imshow(data, cmap=cm.afmhot)
    ax.set_title('Gaussian noise with horizontal colorbar')

    cbar = fig.colorbar(cax, ticks=[-1, 0, 1], orientation='horizontal')
    cbar.ax.set_xticklabels(['Low', 'Medium', 'High'])  # horizontal colorbar

    plt.show()



.. image:: /gallery/ticks_and_spines/images/sphx_glr_colorbar_tick_labelling_demo_002.png
    :alt: Gaussian noise with horizontal colorbar
    :class: sphx-glr-single-img






.. _sphx_glr_download_gallery_ticks_and_spines_colorbar_tick_labelling_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: colorbar_tick_labelling_demo.py <colorbar_tick_labelling_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: colorbar_tick_labelling_demo.ipynb <colorbar_tick_labelling_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
